--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,13 +11,37 @@ nav a {
 h1 {
     color: steelblue;
 }
-img {
+aside img {
     width: 200px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 5px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
-p {
-    padding: 10px;
+main img{
+    width: 150px;
+    height: auto;
+    
+
+}
+main{
+    max-width: 840px;
+}
+p{
+    padding: 0;
+}
+aside{
+    width:auto ;
+    margin: 10 rem;
+    border: 1px;
+    padding: 1rem;
+    background-color: aqua;
+    color: rgb(70, 57, 44);
+    text-align: center;
+
+}
+footer{
+    margin-top: 1 em;
+    border-top: 1px ;
+    text-align: center;
 }
