--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ main{
 }
 aside{
     width:auto ;
-    margin: 10 rem;
+    margin: 1 rem;
     border: 1px;
     padding: 1rem;
     background-color: aqua;
@@ -38,6 +38,6 @@ main img{
 p {padding: 0;}
 footer{
     margin-top: 1 em;
-    border-top: 1px ;
+    border-top: 1px solid #002;
     text-align: center;
 }
