--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,7 +6,7 @@
 --accent1-color:#354F52;
 --accent2-color:#52796F;
 --heading-font: "kaushan Script",cursive;
---paragraph-default-font:"Lobster Two",display;
+--paragraph-default-font:"Lobster Two",cursive;
 --navigation-background-color:#CAD2C5;
 --navigation-link-color:#354F52;
 --navigation-hover-link-color:#52796F;
