--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,12 +5,14 @@
 --secondary-color:#84A98C;
 --accent1-color:#354F52;
 --accent2-color:#52796F;
+
 --heading-font: "kaushan Script",cursive;
 --paragraph-default-font:"Lobster Two",cursive;
---navigation-background-color:#CAD2C5;
---navigation-link-color:#354F52;
---navigation-hover-link-color:#52796F;
---navigation-hover-background-color:#84A98C;
+
+--navigation-background-color:var(--primary-color);
+--navigation-link-color: var(--accent1-color);
+--navigation-hover-link-color: var(--accent2-color);
+--navigation-hover-background-color:var(--secondary-color);
 }
 body{
     font: var(--paragraph-default-font);
