--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,7 +7,7 @@
 --accent2-color:#52796F;
 
 --heading-font: "kaushan Script",cursive;
---paragraph-default-font:"Lobster Two",cursive;
+--paragraph-font:"Lobster Two",cursive;
 
 --nav-background-color:var(--primary-color);
 --nav-link-color: var(--accent1-color);
@@ -15,7 +15,7 @@
 --nav-hover-background-color:var(--secondary-color);
 }
 body{
-    font: var(--paragraph-default-font);
+    font: var(--paragraph-font);
     max-width: "960";
     padding: "20";
 }
