--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -22,7 +22,7 @@ body {
     padding: 20px;
  }
 
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4{
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
