--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 nav {
     background-color:steelblue ;
     padding: 10px;
@@ -30,10 +35,13 @@ aside img {
     border: 5px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    position:relative;
 }
 main img{
     width: 150px;
     height: auto;
+    float: right;
+
 }
 p {padding: 0;}
 footer{
@@ -41,3 +49,20 @@ footer{
     border-top: 1px solid #002;
     text-align: center;
 }
+
+/* Class Selectors */
+
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: 1rem;
+    background-color: lightgreen;
+    color: #000;
+}
+aside h2 {
+    position: absolute;
+    top: 47px;
+    left: 150px;
+}
+
+
