--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,15 +14,7 @@
     --nav-hover-link-color: var(--accent2-color);
     --nav-hover-background-color: var(--secondary-color);
 }
-
-body {
-    font-family: var(--paragraph-font);
-    max-width: 960px;
-
-    padding: 20px;
- }
-
-h1,h2,h3,h4{
+h1,h2{
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
@@ -41,7 +33,17 @@ nav {
     font-size: 1.2rem;
     display: flex;
 }
-
+header img{
+    width: 100px;
+}
+main img{
+    width: 300px;
+}
+footer img{
+    width: 80px;
+    padding: 10px;
+    float: center;
+}
 nav a {
     display: block;
     color: var(--nav-link-color);
@@ -91,7 +93,3 @@ nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
 }
-
-
-
-
