--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,68 +1,96 @@
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 nav {
-    background-color:steelblue ;
-    padding: 10px;
-    
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
 nav a {
-    color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff;
 }
+
 h1 {
     color: steelblue;
-    
 }
-main{
-    max-width: 840px;
+
+.grid {
+    display: grid;
+    align-items: center;
 }
-aside{
-    width:auto ;
+
+main {
+    max-width: 780px;
+    /* Removed extra space */
+    margin: 1rem;
+    /* Removed extra space */
+}
+
+aside {
+    width: 20rem;
     margin: auto;
-    border: 1px;
+    border: 1px solid transparent;
     padding: 1rem;
     background-color: aqua;
     color: rgb(70, 57, 44);
     text-align: center;
+    position: relative;
 }
+
 aside img {
     width: 200px;
     height: auto;
     border: 5px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
-    position:relative;
+    position: relative;
 }
-main img{
+
+main img {
     width: 150px;
     height: auto;
-    float: right;
-
 }
-p {padding: 0;}
-footer{
-    margin-top: auto;
+
+p {
+    padding: 0;
+}
+
+footer {
     border-top: 1px solid #002;
     text-align: center;
+    padding: 1rem;
 }
-
-/* Class Selectors */
 
 .box {
     margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, .1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem;
     background-color: lightgreen;
     color: #000;
 }
+
 aside h2 {
     position: absolute;
     top: 47px;
     left: 150px;
 }
 
-
+header,
+.grid,
+footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
